syntax = "proto3";

option go_package = "github.com/swarajroy/oms-common/api";

package api;

message Order {
    string Id = 1;
    string CustomerId = 2;
    string Status = 3;
    repeated Item Items = 4;
}

message Item {
    string Id = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;

}
service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc GetOrder(GetOrderRequest) returns (Order);
}

message ItemsWithQuantity {
    string Id = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string CustomerId = 1;
    repeated ItemsWithQuantity Items = 2;
}

message GetOrderRequest {
    string CustomerId = 1;
    string OrderId = 2;
}